--- a/src/html/index.html
+++ b/src/html/index.html
@@ -261,12 +261,12 @@
 
    <!-- footer -->
    <footer class="footer">
-      <a class="footer__link" href="mailto:taguaradigital@hotmail.com"> <i class="fas fa-envelope fa-2x"> </i> prueba@correo.com</a>
+      <a class="footer__link" href="mailto:taguaradigital@hotmail.com"> <i class="fas fa-envelope fa-2x"> </i> TaguaraDigital@correo.com</a>
       <ul class="social-list">
          <li class="social-list__item"><a class="social-list__link" href="https://twitter.com/TaguaraDigital" target="_blank"><i class="fab fa-twitter fa-3x"></i></a></li>
          <li class="social-list__item"><a class="social-list__link" href="https://github.com/taguaradigital" target="_blank"><i class="fab fa-github fa-3x"></i></a></li>
-         <li class="social-list__item"><a class="social-list__link" href="#"><i class="fab fa-linkedin fa-3x"></i></a></li>
-         <li class="social-list__item"><a class="social-list__link" href="#"><i class="fab fa-youtube fa-3x"></i></a></li>
+         <!-- <li class="social-list__item"><a class="social-list__link" href="#"><i class="fab fa-linkedin fa-3x"></i></a></li>
+         <li class="social-list__item"><a class="social-list__link" href="#"><i class="fab fa-youtube fa-3x"></i></a></li> -->
       </ul>
    </footer>
 
